--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bedlam-cube"
+name = "polycube"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,3 +10,4 @@ clap = { version = "4.3.19", features = ["derive"] }
 colored = "2.1.0"
 csv = "1.3.0"
 itertools = "0.12.1"
+num-format = "0.4.4"
